--- a/src/app/capture/capture.page.scss
+++ b/src/app/capture/capture.page.scss
@@ -1,7 +1,3 @@
-ion-menu-button {
-  color: var(--ion-color-primary);
-}
-
 #container {
   text-align: center;
   position: absolute;
@@ -10,19 +6,10 @@ ion-menu-button {
   top: 50%;
   transform: translateY(-50%);
 }
-
 #container strong {
   font-size: 20px;
   line-height: 26px;
 }
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-  color: #8c8c8c;
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+#container ion-fab {
+  margin-top: 60px;
 }
