Deleted unused imports

--- a/src/app/capture/capture.page.html
+++ b/src/app/capture/capture.page.html
@@ -19,8 +19,7 @@
 </ion-content>
 
 <div id="container">
-  <strong class="capitalize">Take a nice photo with your camera</
-  strong>
+  <strong class="capitalize">Take a nice photo with your camera</strong>
   <ion-fab vertical="center" horizontal="center" slot="fixed">
     <ion-fab-button (click)="openCamera()">
       <ion-icon aria-hidden="true" name="cameraOutline"></ion-icon>
